<resources>
    <string name="app_name">Kronos</string>
    <string name="title_alert_detail">Alert Detail</string>
    <string name="alert_detail_stop_before_quit">Stopper le chrono avant de quitter</string>
    <string name="alert_edit_lose_modifications">Voulez vous vraiment perdre les modifications ?</string>
    <string name="alert_edit_hint_description">Description</string>
    <string name="alert_edit_hint_total_duration">Durée totale</string>
    <string name="alert_edit_label_total_duration">Durée totale</string>
    <string name="alert_edit_label_description">Description</string>
    <string name="alert_edit_label_alarm_count">Nombre d\'alarmes</string>
    <string name="alert_edit_hint_alarm_count">Nombre d\'alarmes</string>
    <string name="title_activity_login">Se connecter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_duration">La durée totale est invalide</string>
    <string name="error_invalid_maxcount">Le nombre de sonneries est invalide</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">Email et/ou mot de passe erroné</string>
    <string name="title_alert_delete">Etes vous sûr de supprimer cette alerte ?</string>
</resources>
