<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="alert"
            type="com.pacreau.seb.kronos.alert.Alert"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_edit_label_description">

            <EditText
                android:id="@+id/alert_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/alert_edit_hint_description"
                android:text="@{alert.info}"
                android:inputType="textPersonName"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_edit_label_total_duration">

            <EditText
                android:id="@+id/alert_edit_total_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/alert_edit_hint_total_duration"
                android:text="@{String.valueOf(alert.totalDuration)}"
                android:inputType="time"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_edit_label_alarm_count">

            <EditText
                android:id="@+id/alert_edit_alarm_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/alert_edit_hint_alarm_count"
                android:inputType="number"
                android:text="@{String.valueOf(alert.maxCount)}"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/alert_edit_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="false"
            android:src="@android:drawable/ic_menu_save"
            android:visibility="visible"
            app:layout_anchor="@+id/alert_detail_container"
            app:layout_anchorGravity="bottom|end"
            />
    </LinearLayout>
</layout>